[tool.poetry]
name = "aws-autoscalinggroup-activity-exporter"
version = "0.1.0"
description = ""
authors = ["Alex Ramos <aramos@asserts.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.54"
Flask = "^1.1.2"
prometheus-flask-exporter = "^0.18.1"
gunicorn = "^20.0.4"
Flask-APScheduler = "^1.11.0"
JSON-log-formatter = "^0.3.1"
kubernetes = "^17.17.0"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
